--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,5 +1,5 @@
 body {
-  font-family: Kalam, cursive;
+  font-family: Raleway, sans-serif;
   font-weight: lighter;
   font-size: 14px;
   background: radial-gradient(#FEFEFE 50%, #CFCEB5 80%, #7F7F73 100%);
