added important to book btn

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -51,6 +51,6 @@ p {
 }
 
 .button {
-  margin: 16px;
-  font-weight: bolder;
+  margin: 16px        !important;
+  font-weight: bolder !important;
 }
